Add view model for movie list

--- a/feature-list/build.gradle
+++ b/feature-list/build.gradle
@@ -23,8 +23,13 @@ android {
 
 dependencies {
     implementation project(Modules.core_networks)
+    implementation project(Modules.core_utils)
 
+    implementation Libs.appcompat
+    implementation Libs.gson
     implementation Libs.kotlin_std
     implementation Libs.koin_android
+    implementation Libs.koin_viewmodel
+    implementation Libs.livedata
     implementation Libs.retrofit
 }
