Convert core-network module to android library module, create resourceLiveData method

--- a/core-network/build.gradle
+++ b/core-network/build.gradle
@@ -1,9 +1,29 @@
-apply plugin: 'java-library'
-apply plugin: 'kotlin'
+apply plugin: 'com.android.library'
+apply plugin: 'kotlin-android'
+
+android {
+    compileSdkVersion Android.compile_sdk_version
+    defaultConfig {
+        minSdkVersion Android.min_sdk_version
+        targetSdkVersion Android.target_sdk_version
+        versionCode Android.version_code
+        versionName Android.version_name
+
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        consumerProguardFiles 'consumer-rules.pro'
+    }
+    buildTypes {
+        release {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+    }
+}
 
 dependencies {
-    implementation Libs.kotlin_std
     implementation Libs.koin_core
+    implementation Libs.kotlin_std
+    implementation Libs.livedata
     implementation Libs.retrofit
     implementation Libs.retrofit_gson
     implementation Libs.okhttp_logging
