Add basic UI for movie list

--- a/feature-list/build.gradle
+++ b/feature-list/build.gradle
@@ -19,6 +19,16 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+}
+
+tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
 }
 
 dependencies {
@@ -26,10 +36,12 @@ dependencies {
     implementation project(Modules.core_utils)
 
     implementation Libs.appcompat
+    implementation Libs.coil
     implementation Libs.gson
     implementation Libs.kotlin_std
     implementation Libs.koin_android
     implementation Libs.koin_viewmodel
     implementation Libs.livedata
     implementation Libs.retrofit
+    implementation Libs.recycler_view
 }
