Add progress bar and retry functionality to movie lists

--- a/feature-list/build.gradle
+++ b/feature-list/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     implementation Libs.koin_android
     implementation Libs.koin_viewmodel
     implementation Libs.livedata
+    implementation Libs.material
     implementation Libs.retrofit
     implementation Libs.recycler_view
 }
