Add MovieDetailRepository and models

--- a/feature-details/build.gradle
+++ b/feature-details/build.gradle
@@ -36,4 +36,6 @@ dependencies {
     implementation project(Modules.core_utils)
 
     implementation Libs.appcompat
+    implementation Libs.gson
+    implementation Libs.retrofit
 }
