Implement backdrop with CollapsingToolbarLayout for movie details

--- a/feature-details/build.gradle
+++ b/feature-details/build.gradle
@@ -41,7 +41,7 @@ dependencies {
     implementation Libs.kotlin_std
     implementation Libs.koin_android
     implementation Libs.koin_viewmodel
-    implementation Libs.ktx
+    implementation Libs.material
     implementation Libs.livedata
     implementation Libs.retrofit
 }
