Add unit tests for feature-list module converter/usecase/viewmodel

--- a/feature-list/build.gradle
+++ b/feature-list/build.gradle
@@ -46,4 +46,8 @@ dependencies {
     implementation Libs.material
     implementation Libs.retrofit
     implementation Libs.recycler_view
+
+    testImplementation TestLibs.core_testing
+    testImplementation TestLibs.junit
+    testImplementation TestLibs.mockk
 }
