--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ android:
 
     # Specify at least one system image,
     # if you need to run emulator(s) during your tests
-    #- sys-img-armeabi-v7a-android-28
+    - sys-img-armeabi-v7a-android-28
   licenses:
     - 'android-sdk-preview-license-.+'
     - 'android-sdk-license-.+'
@@ -32,6 +32,13 @@ android:
 
 before_install:
   - yes | sdkmanager "platforms;android-28"
+
+# Emulator Management: Create, Start and Wait
+before_script:
+  - echo no | android create avd --force -n test -t android-28 --abi armeabi-v7a -c 100M
+  - emulator -avd test -no-audio -no-window &
+  - android-wait-for-emulator
+  - adb shell input keyevent 82 &
 
 jdk:
   - oraclejdk8
