--- a/.travis.yml
+++ b/.travis.yml
@@ -11,10 +11,10 @@ android:
     - tools
 
     # The BuildTools version used by your project
-    - build-tools-28.0.3
+    - build-tools-26.0.2
 
     # The SDK version used to compile your project
-    - android-28
+    - android-26
 
     # Additional components
     #- extra-google-google_play_services
@@ -24,18 +24,18 @@ android:
 
     # Specify at least one system image,
     # if you need to run emulator(s) during your tests
-    - sys-img-armeabi-v7a-android-28
+    - sys-img-armeabi-v7a-android-26
   licenses:
     - 'android-sdk-preview-license-.+'
     - 'android-sdk-license-.+'
     - 'google-gdk-license-.+'
 
 before_install:
-  - yes | sdkmanager "platforms;android-28"
+  - yes | sdkmanager "platforms;android-26"
 
 # Emulator Management: Create, Start and Wait
 before_script:
-  - echo no | android create avd --force -n test -t android-28 --abi armeabi-v7a -c 100M
+  - echo no | android create avd --force -n test -t android-26 --abi armeabi-v7a -c 100M
   - emulator -avd test -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
@@ -44,4 +44,4 @@ jdk:
   - oraclejdk8
 
 script:
-  - ./gradlew clean ktlint detekt test assembleDebug
+  - ./gradlew clean ktlint detekt test connectedAndroidTest assembleDebug
