--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Thu Sep 12 22:07:47 AEST 2019
+#Fri Aug 28 06:32:47 AEST 2020
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-6.1-milestone-2-all.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-6.5-bin.zip
