Update libraries, and use ViewBinding

--- a/feature-details/build.gradle
+++ b/feature-details/build.gradle
@@ -1,6 +1,5 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion Android.compile_sdk_version
@@ -12,6 +11,9 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles 'consumer-rules.pro'
+    }
+    buildFeatures {
+        viewBinding true
     }
     buildTypes {
         release {
