Refactor build.gradle's

--- a/core-utils/build.gradle
+++ b/core-utils/build.gradle
@@ -1,32 +1,8 @@
 apply plugin: 'com.android.library'
-apply plugin: 'kotlin-android'
-
-android {
-    compileSdkVersion Android.compile_sdk_version
-    defaultConfig {
-        minSdkVersion Android.min_sdk_version
-        targetSdkVersion Android.target_sdk_version
-        versionCode Android.version_code
-        versionName Android.version_name
-
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        consumerProguardFiles 'consumer-rules.pro'
-    }
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
-    }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
-}
+apply from: '../library.gradle'
 
 dependencies {
     implementation Libs.coil
     implementation Libs.coroutines_android
-    implementation Libs.kotlin_std
     implementation Libs.viewmodel_ktx
 }
