--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,10 +29,6 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
 }
 
 dependencies {
@@ -44,8 +40,7 @@ dependencies {
 
     implementation Libs.appcompat
     implementation Libs.constraint_layout
-    implementation Libs.koin_android
-    implementation Libs.kotlin_std
+    implementation Libs.koin
     implementation Libs.ktx
     implementation Libs.navigation
 }
