--- a/detekt.gradle
+++ b/detekt.gradle
@@ -1,7 +1,10 @@
 apply plugin: "io.gitlab.arturbosch.detekt"
 
 detekt {
-    toolVersion = "1.0.1"
-    input = files("src/main/java")
-    filters = ".*/resources/.*,.*/build/.*"
+    toolVersion = "1.19.0"
+    source = files(
+            "src/main/kotlin",
+            "src/main/java"
+    )
+    config = files("$rootDir/config/detekt/detekt.yml")
 }
