--- a/feature-details/build.gradle
+++ b/feature-details/build.gradle
@@ -14,6 +14,7 @@ tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
 }
 
 dependencies {
+    implementation project(Modules.core_mvi)
     implementation project(Modules.core_networks)
     implementation project(Modules.core_utils)
 
@@ -23,10 +24,10 @@ dependencies {
     implementation Libs.gson
     implementation Libs.koin
     implementation Libs.material
-    implementation Libs.livedata
     implementation Libs.retrofit
 
     testImplementation TestLibs.core_testing
+    testImplementation TestLibs.coroutines_test
     testImplementation TestLibs.junit
     testImplementation TestLibs.mockk
 
