--- a/library.gradle
+++ b/library.gradle
@@ -15,6 +15,10 @@ android {
             minifyEnabled true
         }
     }
+
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
