--- a/.editorconfig
+++ b/.editorconfig
@@ -1,6 +1,7 @@
 [*.{kt,kts}]
 indent_style = space
 indent_size = 4
+max_line_length = 150
 trim_trailing_whitespace = true
 insert_final_newline = true
 end_of_line = lf
