--- a/core-mvi/build.gradle
+++ b/core-mvi/build.gradle
@@ -5,5 +5,6 @@ dependencies {
     implementation project(Modules.core_utils)
 
     implementation Libs.coroutines_android
+    implementation Libs.orbit
     implementation Libs.viewmodel_ktx
 }
