--- a/feature-list/build.gradle
+++ b/feature-list/build.gradle
@@ -24,6 +24,7 @@ dependencies {
     implementation Libs.gson
     implementation Libs.koin
     implementation Libs.material
+    implementation Libs.orbit
     implementation Libs.retrofit
     implementation Libs.recycler_view
 
@@ -31,6 +32,7 @@ dependencies {
     testImplementation TestLibs.coroutines_test
     testImplementation TestLibs.junit
     testImplementation TestLibs.mockk
+    testImplementation TestLibs.orbit
 
     debugImplementation TestLibs.fragment_testing
     debugImplementation TestLibs.test_core
