--- a/library.gradle
+++ b/library.gradle
@@ -19,6 +19,10 @@ android {
     buildFeatures {
         viewBinding true
     }
+
+    packagingOptions {
+        exclude 'META-INF/*'
+    }
 }
 
 dependencies {
