--- a/.github/workflows/build-test-workflow.yml
+++ b/.github/workflows/build-test-workflow.yml
@@ -27,23 +27,23 @@ jobs:
       - name: Run unit tests
         run: ./gradlew testDebugUnitTest
 
-  ui-test:
-    runs-on: macos-latest
-    steps:
-      - name: Checkout the code
-        uses: actions/checkout@v2
-
-      - name: Set up JDK 11
-        uses: actions/setup-java@v1
-        with:
-          java-version: '11'
-
-      - name: Run UI tests
-        uses: reactivecircus/android-emulator-runner@v2
-        with:
-          arch: 'x86_64'
-          api-level: 30
-          script: ./gradlew connectedDebugAndroidTest
+#  ui-test:
+#    runs-on: macos-latest
+#    steps:
+#      - name: Checkout the code
+#        uses: actions/checkout@v2
+#
+#      - name: Set up JDK 11
+#        uses: actions/setup-java@v1
+#        with:
+#          java-version: '11'
+#
+#      - name: Run UI tests
+#        uses: reactivecircus/android-emulator-runner@v2
+#        with:
+#          arch: 'x86_64'
+#          api-level: 30
+#          script: ./gradlew connectedDebugAndroidTest
 
   build:
     runs-on: ubuntu-latest
